log
Tue 07 May 2024 08:19:47 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
3e7b1cb
Tue 07 May 2024 08:25:47 PM UTC: 
 treemap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
e1dac2b
Tue 07 May 2024 08:28:44 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:73:13: error: ‘else’ without a previous ‘if’
   73 |             else {
      |             ^~~~
Compilation failed
16c4d3b
Tue 07 May 2024 08:30:03 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|7
total_score: 5/70
87df324
